main.tf
provider "aws" {
  profile = "probe"
  region = "ap-south-1"
}

data "aws_vpc" "default" {
  default = true
}



resource "aws_instance" "probe" {
  ami           = var.ec2_ami
  instance_type = var.ec2_instance_type
  key_name      = var.ssh_key
  vpc_security_group_ids = [aws_security_group.probe_sg.id]

  provisioner "file" {
    source      = "docker-compose.yml"
    destination = "/home/ec2-user/docker-compose.yml"
  }

  provisioner "file" {
    source      = "setup.sh"
    destination = "/home/ec2-user/setup.sh"
  }

  provisioner "file" {
    source      = ".env"
    destination = "/home/ec2-user/.env"
  }

   provisioner "remote-exec" {
        inline = [
        "echo 'Starting setup...'",
        "sed -i 's/\\r$//' /home/ec2-user/setup.sh",
        "chmod +x /home/ec2-user/setup.sh",
        "sudo /home/ec2-user/setup.sh"
        ]
    }

    

    connection {
      type = "ssh"
      user = "ec2-user"
      private_key = file("probe-ssh.pem")
      host = self.public_ip
      timeout = "2m"
    }
  
}


resource "aws_security_group" "probe_sg" {
  name        = "probe_sg"
  description = "Security group for probe instance"
  vpc_id = data.aws_vpc.default.id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    
  }


  ingress {
    from_port = 8181
    to_port = 8181
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    
  }

  ingress {
    from_port = 3000
    to_port = 3000
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 egress {
  from_port   = 0
  to_port     = 0
  protocol    = "-1"
  cidr_blocks = ["0.0.0.0/0"]
}

}
